# HW_24.1

./: README.md  pyproject.toml
config/: settings.py
users/: models.py
